--- a/clase-3-29-4-2025/consigna/web.html
+++ b/clase-3-29-4-2025/consigna/web.html
@@ -41,16 +41,18 @@
       <h2>Contacto</h2>
       <form>
         <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre">
+        <input type="text" id="nombre" name="nombre" autocomplete="off" placeholder="Ingresa tu nombre">
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email">
+        <input type="email" id="email" name="email" autocomplete="off" placeholder="Ingresa tu email">
         <label for="mensaje">Mensaje:</label>
-        <textarea id="mensaje" name="mensaje"></textarea>
+        <textarea style="resize: none;" id="mensaje" name="mensaje" placeholder="Ingrese su mensaje"></textarea>
         <button type="submit">Enviar</button>
       </form>
+      <button>PROBANDO :))))))))))))))))))))</button>
     </section>
   </main>
   <footer>
+    <h3>Sitio desarrollado por Gabriel</h3>
     <p>&copy; 2023 Mi Sitio Web. Todos los derechos reservados.</p>
   </footer>
 </body>
