clase 3 - selectores css | introducción git

--- a/clase-4-6-5-2025/index.html
+++ b/clase-4-6-5-2025/index.html
@@ -1,35 +1,20 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <title>Práctica con clases reutilizables</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ejemplo de selectores</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <header class="seccion encabezado">
-    <h1 class="titulo">Mi Sitio de Práctica</h1>
-    <nav class="seccion menu">
-      <ul class="lista-horizontal">
-        <li><a href="#" class="enlace">Inicio</a></li>
-        <li><a href="#" class="enlace">Servicios</a></li>
-        <li><a href="#" class="enlace">Contacto</a></li>
-      </ul>
-    </nav>
-  </header>
+  <section class="persona">Juan</section>
+  <section class="persona mujer">María</section>
+  <section class="persona mujer">Luisa</section>
 
-  <main>
-    <article class="seccion contenido">
-      <h2 class="titulo-secundario">Sobre esta práctica</h2>
-      <p class="parrafo">Este contenido está dentro de una única sección y usa clases reutilizables para aplicar estilos
-        comunes.</p>
-    </article>
-  </main>
-
-  <footer class="seccion pie">
-    <p class="texto-pequeno">&copy; 2025 Sitio de Práctica</p>
-  </footer>
+  <button class="btn">Otro botón</button>
+  <button class="btn" id="boton-de-enviar">Haz click</button>
 </body>
 
 </html>
