add: plantilla para grid con estilos

--- a/clase-9-22-5-2025/ejercicios/ejercicio-20-5.html
+++ b/clase-9-22-5-2025/ejercicios/ejercicio-20-5.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ejercicio clase 20/5</title>
-  <link rel="stylesheet" href="./styles//style.css">
+  <link rel="stylesheet" href="../styles/style.css">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     <h3>Supervisor</h3>
     <p>Monitors activity to indentify project roadblocks</p>
     <div class="cont-img">
-      <img src="./assets/lupa.avif" alt="icono de una lupa">
+      <img src="../assets/lupa.avif" alt="icono de una lupa">
     </div>
   </div>
 </body>
