add: incorporación sección como funciona

--- a/clase-11-29-5-2025/index.html
+++ b/clase-11-29-5-2025/index.html
@@ -35,6 +35,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#servicios">Beneficios</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#como-funciona">¿Cómo funciona?</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -76,7 +79,26 @@
           Alias, corporis!</p>
       </div>
     </section>
+    <section id="como-funciona" class="como-funciona">
+      <h2>¿Cómo funciona??</h2>
+      <div class="card">
+        <h3>🟡 Paso 1: Completá el formulario</h3>
+        <p>Dejanos tus datos y contanos qué necesitás. Es simple y rápido: nombre, email y una línea sobre tu proyecto.
+        </p>
+      </div>
+      <div class="card">
+        <h3>🟢 Paso 2: Recibí una asesoría personalizada</h3>
+        <p>En menos de 24hs, nuestro equipo se pondrá en contacto con vos para darte una propuesta adaptada a tus
+          objetivos.</p>
+      </div>
+      <div class="card">
+        <h3>🔵 Paso 3: Comenzamos a trabajar juntos</h3>
+        <p>Ponemos manos a la obra: activamos el plan, te guiamos paso a paso y empezás a ver resultados reales.
+        </p>
+      </div>
+    </section>
   </main>
+
   <footer></footer>
 
   <!-- Javascript bootstrap -->
