clase 16 - métodos de array forEach, find, ejercitación

--- a/clase-16-17-6-2025/index.html
+++ b/clase-16-17-6-2025/index.html
@@ -4,17 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clase 15 - Array y objectos</title>
+  <title>Document</title>
 </head>
 
 <body>
-
+  <h1>Buscar apellido</h1>
   <form id="form">
-    <input type="email" id="inputEmail" value="pepe">
+    <input id="letter" type="text" placeholder="Ingrese una letra">
     <button>Enviar</button>
   </form>
 
-  <script src="practica-array.js"></script>
+  <p id="result"></p>
+
+  <script src="ejemplo-find.js"></script>
 </body>
 
 </html>
