clase 20 - asincronismo | llamada a recurso externo

--- a/clase-20-1-7-2025/index.html
+++ b/clase-20-1-7-2025/index.html
@@ -27,7 +27,7 @@
   <!-- Lista de productos -->
   <ul></ul>
 
-  <script src="ejercicio.js"></script>
+  <script src="asincronia.js"></script>
 </body>
 
 </html>
